# diabetes_prediction

./: .gitignore  README.md  config.yaml  pyproject.toml
notebooks/: models_evaluation.ipynb  zhiwen_EDA.ipynb  zidene.ipynb
src/diabetes_prediction/: function.py  train.py
